--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -61,8 +61,8 @@
         </div>
         <h2>{{ 'welcome.any-device-anywhere.title' | transloco }}</h2>
         <p>{{ 'welcome.any-device-anywhere.1' | transloco }}</p>
-        <p>{{ 'welcome.any-device-anywhere.2.1' | transloco }} <a href="https://github.com/Nault/Nault/releases" target="_blank" rel="noopener noreferrer">{{ 'welcome.any-device-anywhere.2.2-link-github-releases' | transloco }}</a>{{ 'welcome.any-device-anywhere.2.3' | transloco }}</p>
-        <p>{{ 'welcome.any-device-anywhere.3.1' | transloco }} <a href="https://github.com/Nault/Nault" target="_blank" rel="noopener noreferrer">{{ 'welcome.any-device-anywhere.3.2-link-github' | transloco }}</a>{{ 'welcome.any-device-anywhere.3.3' | transloco }}</p>
+        <p>{{ 'welcome.any-device-anywhere.2.1' | transloco }} <a href="https://github.com/kotaicurrency/kotai-wallet/releases" target="_blank" rel="noopener noreferrer">{{ 'welcome.any-device-anywhere.2.2-link-github-releases' | transloco }}</a>{{ 'welcome.any-device-anywhere.2.3' | transloco }}</p>
+        <p>{{ 'welcome.any-device-anywhere.3.1' | transloco }} <a href="https://github.com/kotaicurrency/kotai-wallet" target="_blank" rel="noopener noreferrer">{{ 'welcome.any-device-anywhere.3.2-link-github' | transloco }}</a>{{ 'welcome.any-device-anywhere.3.3' | transloco }}</p>
       </div>
 
       <div class="feature uk-card-body uk-card-default">
