--- a/src/app/components/address-book/address-book.component.html
+++ b/src/app/components/address-book/address-book.component.html
@@ -28,11 +28,11 @@
           <span [title]="( totalTrackedBalanceRaw.gt(0) ? ( '+' + ( totalTrackedBalanceRaw.toString(10) ) + ' raw' ) : '' )">
             <span class="amount-integer">{{ totalTrackedBalance | rai: 'mnano,true' | amountsplit: 0 }}</span>
             <span class="amount-fractional">{{ totalTrackedBalance | rai: 'mnano,true' | amountsplit: 1 }}</span>
-            <span class="currency-name">XNO</span>
+            <span class="currency-name">KTI</span>
           </span>
           <div *ngIf="totalTrackedPending.gt(0)" class="incoming-label">
             <div class="text-snippet">{{ 'general.new' | transloco }}</div>
-            <div class="text-full">+{{ totalTrackedPending | rai: 'mnano,true' | amountsplit: 0 }}{{ totalTrackedPending | rai: 'mnano,true' | amountsplit: 1 }} XNO</div>
+            <div class="text-full">+{{ totalTrackedPending | rai: 'mnano,true' | amountsplit: 0 }}{{ totalTrackedPending | rai: 'mnano,true' | amountsplit: 1 }} KTI</div>
           </div>
           <div class="account-amounts-converted uk-width-1-1 text-half-muted">
             {{ totalTrackedBalanceFiat | fiat: appSettings.settings.displayCurrency }}
@@ -65,7 +65,7 @@
                             [class.disabled]="!statsRefreshEnabled"
                             [class.uk-text-muted]="!statsRefreshEnabled"
                             uk-icon="icon: refresh;"
-                            title="Reload tracked balances (for addresses not in your Nault wallet)"
+                            title="Reload tracked balances (for addresses not in your KOTAI wallet)"
                             uk-tooltip
                             (click)="updateTrackedBalances(true)"
                           ></a>
@@ -109,11 +109,11 @@
                           <span [title]="( accounts[addressBook.account]?.balanceRaw.gt(0) ? ( '+' + ( accounts[addressBook.account]?.balanceRaw.toString(10) ) + ' raw' ) : '' )">
                             <span class="amount-integer">{{ accounts[addressBook.account]?.balance | rai: 'mnano,true' | amountsplit: 0 }}</span>
                             <span class="amount-fractional">{{ accounts[addressBook.account]?.balance | rai: 'mnano,true' | amountsplit: 1 }}</span>
-                            <span class="currency-name">XNO</span>
+                            <span class="currency-name">KTI</span>
                           </span>
                           <div *ngIf="accounts[addressBook.account]?.pending.gt(0)" class="incoming-label">
                             <div class="text-snippet">New</div>
-                            <div class="text-full">+{{ accounts[addressBook.account]?.pending | rai: 'mnano,true' | amountsplit: 0 }}{{ accounts[addressBook.account]?.pending | rai: 'mnano,true' | amountsplit: 1 }} XNO</div>
+                            <div class="text-full">+{{ accounts[addressBook.account]?.pending | rai: 'mnano,true' | amountsplit: 0 }}{{ accounts[addressBook.account]?.pending | rai: 'mnano,true' | amountsplit: 1 }} KTI</div>
                           </div>
                         </div>
                         <div class="account-amounts-converted uk-width-1-1 text-half-muted">
@@ -163,7 +163,7 @@
                 <div class="uk-form-controls">
                   <div class="uk-inline uk-width-1-1">
                     <a class="uk-form-icon uk-form-icon-flip" uk-icon="icon: camera" (click)="openQR('account1','account')" uk-tooltip [title]="t('general.scan-qr-code')" *ngIf="creatingNewEntry"></a>
-                    <input type="text" class="uk-input" id="new-address-account" [(ngModel)]="newAddressAccount" [disabled]="!creatingNewEntry" placeholder="nano_abc123">
+                    <input type="text" class="uk-input" id="new-address-account" [(ngModel)]="newAddressAccount" [disabled]="!creatingNewEntry" placeholder="kti_abc123">
                   </div>
                 </div>
               </div>
