--- a/src/app/components/remote-signing/remote-signing.component.html
+++ b/src/app/components/remote-signing/remote-signing.component.html
@@ -6,7 +6,7 @@
       <div class="uk-width-1-1">
         <div class="uk-card uk-card-default">
           <div class="uk-card-header uk-form-horizontal">
-            <p><strong>An extremely secure way of transacting on the nano network without exposing your private keys to the Internet, ensuring only non-sensitive data is transferred between devices.</strong>
+            <p><strong>An extremely secure way of transacting on the KOTAI network without exposing your private keys to the Internet, ensuring only non-sensitive data is transferred between devices.</strong>
             <br>
             A full security and user guide is found <a href="https://docs.nault.cc/2020/08/05/security-of-nano.html#transact-using-a-remote-signing-procedure" target="_blank" rel="noopener noreferrer">here</a>.
             </p>
@@ -20,7 +20,7 @@
                 <div class="uk-form-controls">
                   <div class="uk-inline uk-width-1-1">
                     <a class="uk-form-icon uk-form-icon-flip" uk-icon="icon: camera" (click)="openQR('account1','account')" uk-tooltip title="Scan from QR code"></a>
-                    <input (blur)="validateDestination()" (input)="searchAddressBook()" (focus)="searchAddressBook()" (keyup.enter)="start()" [(ngModel)]="toAccountID" class="uk-input" [ngClass]="{ 'uk-form-success': toAccountStatus === 1, 'uk-form-danger': toAccountStatus === 0 }" type="text" placeholder="nano_1abc..." autocomplete="off">
+                    <input (blur)="validateDestination()" (input)="searchAddressBook()" (focus)="searchAddressBook()" (keyup.enter)="start()" [(ngModel)]="toAccountID" class="uk-input" [ngClass]="{ 'uk-form-success': toAccountStatus === 1, 'uk-form-danger': toAccountStatus === 0 }" type="text" placeholder="kti_1abc..." autocomplete="off">
 
                     <div *ngIf="(addressBookResults$ | async).length" [hidden]="!showAddressBook" class="nlt-dropdown uk-animation-slide-down-small uk-width-1-1 uk-card uk-card-default uk-card-body uk-position-absolute" style="z-index: 15000">
                       <ul class="uk-nav uk-nav-default">
@@ -42,7 +42,7 @@
           <div class="uk-card-header uk-form-horizontal">
             <h4>STEP 2 - Sign Block (Offline Device)</h4>
             <p><a routerLink="/qr-scan" routerLinkActive="active">Scan the unsigned QR code</a> from Step 1 <strong>OR</strong> paste the block below. Sign it using a key owning the account from step 1.<br>
-            Nault can optionally be set in Offline Mode from the <a routerLink="/configure-app" routerLinkActive="active">Server Configuration</a> to avoid network notifications.</p>
+            KOTAI-Wallet can optionally be set in Offline Mode from the <a routerLink="/configure-app" routerLinkActive="active">Server Configuration</a> to avoid network notifications.</p>
             
             <div class="uk-form-horizontal">
               <div class="uk-margin">
