--- a/src/app/components/sign/sign.component.html
+++ b/src/app/components/sign/sign.component.html
@@ -1,7 +1,7 @@
 <div uk-grid>
   <div class="uk-width-1-1">
-    <h2 *ngIf="shouldSign">Sign Nano Block</h2>
-    <h2 *ngIf="!shouldSign">Process Nano Block</h2>
+    <h2 *ngIf="shouldSign">Sign KOTAI Block</h2>
+    <h2 *ngIf="!shouldSign">Process KOTAI Block</h2>
 
     <!-- Confirmation Panel -->
     <div uk-grid *ngIf="activePanel == 'confirm'" class="uk-animation-slide-left">
@@ -20,10 +20,10 @@
               <div class="block-amount-primary" [class.uk-text-danger]="txType == txTypes.send" [class.uk-text-success]="txType == txTypes.receive">
                 <span class="amount-integer">{{ rawAmount | rai: 'mnano,true' | amountsplit: 0 }}</span>
                 <span class="amount-fractional">{{ rawAmount | rai: 'mnano,true' | amountsplit: 1 }}</span>
-                <span class="currency-name">XNO</span>
+                <span class="currency-name">KTI</span>
               </div>
               <div style="margin: 8px 0 -1px 0;" class="text-half-muted" *ngIf="settings.settings.displayCurrency && amountFiat !== null">{{ amountFiat | fiat: settings.settings.displayCurrency }}</div>
-              <div style="margin: 1px 0 -1px 0;" class="uk-text-muted" *ngIf="settings.settings.displayCurrency && amountFiat !== null">{{ price.price.lastPrice | fiat: settings.settings.displayCurrency }} / XNO</div>
+              <div style="margin: 1px 0 -1px 0;" class="uk-text-muted" *ngIf="settings.settings.displayCurrency && amountFiat !== null">{{ price.price.lastPrice | fiat: settings.settings.displayCurrency }} / KTI</div>
             </div>
           </div>
         </div>
@@ -57,7 +57,7 @@
                       <span class="balance-amount-primary">
                         <span class="amount-integer">{{ fromAccountBalance ? (fromAccountBalance | rai: 'mnano,true' | amountsplit: 0) : 'N/A' }}</span>
                         <span class="amount-fractional">{{ fromAccountBalance ? (fromAccountBalance | rai: 'mnano,true' | amountsplit: 1) : '' }}</span>
-                        <span class="currency-name">{{ fromAccountBalance ? 'XNO' : '' }}</span>
+                        <span class="currency-name">{{ fromAccountBalance ? 'KTI' : '' }}</span>
                       </span>
                     </span>
                   </div>
@@ -68,7 +68,7 @@
                         <span class="amount-sign">-</span>
                         <span class="amount-integer">{{ rawAmount | rai: 'mnano,true' | amountsplit: 0 }}</span>
                         <span class="amount-fractional">{{ rawAmount | rai: 'mnano,true' | amountsplit: 1 }}</span>
-                        <span class="currency-name">XNO</span>
+                        <span class="currency-name">KTI</span>
                       </span>
                     </span>
                   </div>
@@ -119,7 +119,7 @@
                       <span class="balance-amount-primary">
                         <span class="amount-integer">{{ toAccountBalance && txType === txTypes.receive ? (toAccountBalance | rai: 'mnano,true' | amountsplit: 0) : 'N/A' }}</span>
                         <span class="amount-fractional">{{ toAccountBalance && txType === txTypes.receive ? (toAccountBalance | rai: 'mnano,true' | amountsplit: 1) : '' }}</span>
-                        <span class="currency-name">{{ toAccountBalance && txType === txTypes.receive ? 'XNO' : '' }}</span>
+                        <span class="currency-name">{{ toAccountBalance && txType === txTypes.receive ? 'KTI' : '' }}</span>
                       </span>
                     </span>
                   </div>
@@ -130,7 +130,7 @@
                         <span class="amount-sign">+</span>
                         <span class="amount-integer">{{ rawAmount | rai: 'mnano,true' | amountsplit: 0 }}</span>
                         <span class="amount-fractional">{{ rawAmount | rai: 'mnano,true' | amountsplit: 1 }}</span>
-                        <span class="currency-name">XNO</span>
+                        <span class="currency-name">KTI</span>
                       </span>
                     </span>
                   </div>
@@ -351,7 +351,7 @@
     <div uk-grid *ngIf="activePanel == 'error'" class="uk-animation-slide-left">
       <div class="uk-width-1-1">
         <div class="uk-card uk-card-default uk-width-1-1 uk-text-center">
-          <span style="display: block; padding-top: 8px;">The provided block info is not valid or Nault got connection issues.<br/> Try set Nault in Offline Mode from the app settings if you want to be offline.<br/></span>
+          <span style="display: block; padding-top: 8px;">The provided block info is not valid or KOTAI-Wallet got connection issues.<br/> Try set KOTAI-Wallet in Offline Mode from the app settings if you want to be offline.<br/></span>
         </div>
       </div>
     </div>
@@ -367,7 +367,7 @@
         <h2 class="uk-modal-title">Signed Block</h2>
     </div>
     <div class="uk-modal-body modal-qr-body">
-      <p><a routerLink="/qr-scan" routerLinkActive="active" class="uk-modal-close">Scan</a> the signed QR with an online Nault, or copy the "Signed Block" to <a routerLink="/remote-signing" routerLinkActive="active" class="uk-modal-close">Step 3</a>.</p>
+      <p><a routerLink="/qr-scan" routerLinkActive="active" class="uk-modal-close">Scan</a> the signed QR with an online KOTAI-Wallet, or copy the "Signed Block" to <a routerLink="/remote-signing" routerLinkActive="active" class="uk-modal-close">Step 3</a>.</p>
       
       <div *ngIf="qrString && finalSignature" class="uk-width-1-1 uk-text-center" style="display: flex; justify-content: center;">
         <span class="uk-text-small" uk-tooltip title="Signed block string to be copied to remote device" style="overflow-wrap: anywhere;"><strong>Signed Block</strong></span>
